--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ if(NOT DEFINED CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
 endif()
 
 option(LQP_BUILD_DOCUMENTATION "Build documentation (needs Doxygen)" OFF)
+option(LQP_WITH_GUROBI "Build with Gurobi support (if available)" OFF)
 
 include(GNUInstallDirs)
 set(LQP_DATADIR ${CMAKE_INSTALL_FULL_DATADIR})
@@ -18,6 +19,16 @@ set(LQP_DATADIR ${CMAKE_INSTALL_FULL_DATADIR})
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 find_package(GLPK REQUIRED)
+
+if(LQP_WITH_GUROBI)
+  find_package(Gurobi)
+
+  if(Gurobi_FOUND)
+    set(LQP_HAS_GUROBI 1)
+  endif()
+endif()
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/library/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)
 
 add_library(lqp0
   library/Expr.cc
@@ -28,6 +39,7 @@ add_library(lqp0
   library/Variable.cc
 
   library/solvers/GlpkSolver.cc
+  library/solvers/GurobiSolver.cc
 )
 
 target_compile_features(lqp0
@@ -38,12 +50,21 @@ target_compile_features(lqp0
 target_include_directories(lqp0
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+  PRIVATE
+    ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 target_link_libraries(lqp0
   PRIVATE
     GLPK::GLPK
 )
+
+if(Gurobi_FOUND)
+  target_link_libraries(lqp0
+    PRIVATE
+      Gurobi::Gurobi
+  )
+endif()
 
 set_target_properties(lqp0
   PROPERTIES
